--- a/CSS_Animations/index.html
+++ b/CSS_Animations/index.html
@@ -22,7 +22,7 @@
     <br></br>
 
 
-    <div class='grow' id='div1'>
+    <div class="grow" id="btn1">
       <button>click here!</button>
     </div>
   </div>
