Fix button animations

--- a/CSS_Animations/index.html
+++ b/CSS_Animations/index.html
@@ -22,8 +22,8 @@
     <br></br>
 
 
-    <div class="grow" id="btn1">
-      <button>click here!</button>
+    <div id="div1">
+      <button class="grow">click here!</button>
     </div>
   </div>
 
