--- a/CSS_Animations/index.html
+++ b/CSS_Animations/index.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' , href='https://fonts.googleapis.com/css?family=Roboto'>
   <link rel='stylesheet' , href="http://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" , href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  <link rel='stylesheet' , href='/main.css'>
+  <link rel='stylesheet' , href='main.css'>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
   </div>
 
   <script src="https://unpkg.com/vue"></script>
-  <script src='/main.js'></script>
+  <script src='main.js'></script>
 </body>
 
 </html>
