--- a/gh-user-email/data/data.html
+++ b/gh-user-email/data/data.html
@@ -43,7 +43,7 @@
   
   <meta name="pjax-timeout" content="1000">
   
-  <meta name="request-id" content="F3A7:40C8:28E9F9C:3FF03B7:592B42D5" data-pjax-transient>
+  <meta name="request-id" content="FF02:40C8:29E9188:417B032:592B5BCB" data-pjax-transient>
   
 
   <meta name="selected-link" value="code_search" data-pjax-transient>
@@ -52,7 +52,7 @@
 <meta name="google-site-verification" content="ZzhVyEFwb7w3e0-uOTltm8Jsck2F5StVihD0exw2fsA">
     <meta name="google-analytics" content="UA-3769691-2">
 
-<meta content="collector.githubapp.com" name="octolytics-host" /><meta content="github" name="octolytics-app-id" /><meta content="https://collector.githubapp.com/github-external/browser_event" name="octolytics-event-url" /><meta content="F3A7:40C8:28E9F9C:3FF03B7:592B42D5" name="octolytics-dimension-request_id" /><meta content="iad" name="octolytics-dimension-region_edge" /><meta content="iad" name="octolytics-dimension-region_render" />
+<meta content="collector.githubapp.com" name="octolytics-host" /><meta content="github" name="octolytics-app-id" /><meta content="https://collector.githubapp.com/github-external/browser_event" name="octolytics-event-url" /><meta content="FF02:40C8:29E9188:417B032:592B5BCB" name="octolytics-dimension-request_id" /><meta content="iad" name="octolytics-dimension-region_edge" /><meta content="iad" name="octolytics-dimension-region_render" />
 
 
 
@@ -67,10 +67,10 @@
   <meta name="user-login" content="">
 
       <meta name="expected-hostname" content="github.com">
-    <meta name="js-proxy-site-detection-payload" content="YjIzOTRmNTlkNzJiMGYwMjhhNGNlNGUxM2RiYTRiYmM3ZTI4M2I5MzQ1ODg5YTFiZTgzYTgyODgzNzYxNjNlZHx7InJlbW90ZV9hZGRyZXNzIjoiMTc0LjUzLjExLjE2MSIsInJlcXVlc3RfaWQiOiJGM0E3OjQwQzg6MjhFOUY5QzozRkYwM0I3OjU5MkI0MkQ1IiwidGltZXN0YW1wIjoxNDk2MDA3MzgxLCJob3N0IjoiZ2l0aHViLmNvbSJ9">
+    <meta name="js-proxy-site-detection-payload" content="MzNkYTE3NjFmY2VkZDQzMzgzZTBlYTU3ZDE5ZjU1NjI2ODQzZjgxYTk1ZWQyYTQ0ZWQyYmRjYThmYjFmNDBhZXx7InJlbW90ZV9hZGRyZXNzIjoiMTc0LjUzLjExLjE2MSIsInJlcXVlc3RfaWQiOiJGRjAyOjQwQzg6MjlFOTE4ODo0MTdCMDMyOjU5MkI1QkNCIiwidGltZXN0YW1wIjoxNDk2MDEzNzcxLCJob3N0IjoiZ2l0aHViLmNvbSJ9">
 
 
-  <meta name="html-safe-nonce" content="a90aecf632e5fbfbab861882c39bf1d2c8baf410">
+  <meta name="html-safe-nonce" content="94a83016c48b243c81a57f9453bc284b5b8893cd">
 
   <meta http-equiv="x-pjax-version" content="757efe3f0bbc93dc131b9a7d2ae5448c">
   
@@ -177,12 +177,12 @@
 <div class="border-bottom mb-4">
   <div class="container d-flex flex-items-center">
     <nav class="underline-nav" data-pjax role="navigation">
-        <a href="https://github.com/search?q=apikey%3D&amp;type=Repositories" class="underline-nav-item ">Repositories<include-fragment src="https://github.com/search/count?p=1&amp;q=apikey%3D&amp;type=Repositories"></include-fragment></a>
+        <a href="https://github.com/search?q=apikey%3D&amp;type=Repositories" class="underline-nav-item ">Repositories<span class="Counter ml-2">42</span></a>
         <a href="https://github.com/search?q=apikey%3D&amp;type=Code" class="underline-nav-item selected">Code</a>
         <a href="https://github.com/search?q=apikey%3D&amp;type=Commits" class="underline-nav-item ">Commits<include-fragment src="https://github.com/search/count?p=1&amp;q=apikey%3D&amp;type=Commits"></include-fragment></a>
-        <a href="https://github.com/search?q=apikey%3D&amp;type=Issues" class="underline-nav-item ">Issues<include-fragment src="https://github.com/search/count?p=1&amp;q=apikey%3D&amp;type=Issues"></include-fragment></a>
-        <a href="https://github.com/search?q=apikey%3D&amp;type=Wikis" class="underline-nav-item ">Wikis<include-fragment src="https://github.com/search/count?p=1&amp;q=apikey%3D&amp;type=Wikis"></include-fragment></a>
-        <a href="https://github.com/search?q=apikey%3D&amp;type=Users" class="underline-nav-item ">Users<include-fragment src="https://github.com/search/count?p=1&amp;q=apikey%3D&amp;type=Users"></include-fragment></a>
+        <a href="https://github.com/search?q=apikey%3D&amp;type=Issues" class="underline-nav-item ">Issues<span class="Counter ml-2">22K</span></a>
+        <a href="https://github.com/search?q=apikey%3D&amp;type=Wikis" class="underline-nav-item ">Wikis<span class="Counter ml-2">4K</span></a>
+        <a href="https://github.com/search?q=apikey%3D&amp;type=Users" class="underline-nav-item ">Users</a>
     </nav>
     <div class="flex-auto f6 text-right">
       <a href="/search/advanced?q=apikey%3D" class="muted-link">Advanced search</a>
@@ -458,7 +458,7 @@
       <svg aria-hidden="true" class="octicon octicon-mark-github" height="24" version="1.1" viewBox="0 0 16 16" width="24"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg>
 </a>
     <ul class="site-footer-links">
-      <li>&copy; 2017 <span title="0.10069s from unicorn-687561276-tw639">GitHub</span>, Inc.</li>
+      <li>&copy; 2017 <span title="0.08814s from github-fe144-cp1-prd.iad.github.net">GitHub</span>, Inc.</li>
         <li><a href="https://github.com/site/terms" data-ga-click="Footer, go to terms, text:terms">Terms</a></li>
         <li><a href="https://github.com/site/privacy" data-ga-click="Footer, go to privacy, text:privacy">Privacy</a></li>
         <li><a href="https://github.com/security" data-ga-click="Footer, go to security, text:security">Security</a></li>
