--- a/voronoi/index.html
+++ b/voronoi/index.html
@@ -28,10 +28,10 @@
 			-->
 			<input id="voronoiNumberSites" type="text" value="1" size="5" maxlength="5" /> sites randomly
 			<br><br/>
-			<div>
+			<div id='p1score'>
 				Player1: 0
 			</div>
-			<div>
+			<div id='p2score'>
 				Player2: 0
 			</div>
 			</div>
