--- a/voronoi/index.html
+++ b/voronoi/index.html
@@ -43,6 +43,10 @@
 			<noscript>You need to enable Javascript in your browser for this page to display properly.</noscript>
 			<canvas id="voronoiCanvas" style="cursor:crosshair" width="800" height="600"></canvas>
 		</div>
+		<p>Note: currently prone to copycat tactics. 
+			Two solutions - 
+			1. prevent people from placing points two close. 
+			2. count score based on size of polygon made, regardless of future alterations.</p>
 
 	</div>
 </body>
